--- a/telegraf.conf
+++ b/telegraf.conf
@@ -18,18 +18,18 @@
 ############################################# 
 
 [[outputs.influxdb_v2]]
-  urls = ["https://europe-west1-1.gcp.cloud2.influxdata.com"]
-  token = "A-REMPLIR"
-  organization = "A-REMPLIR"
-  bucket = "A-REMPLIR"
+  urls = ["######"]
+  token = "######"
+  organization = "######"
+  bucket = "stizy"
 
 [[inputs.mqtt_consumer]]
   servers = ["tcp://hetic.arcplex.fr:1883"]
-  topics = ["A-REMPLIR/#"] //
-  username = "A-REMPLIR"
-  password = "A-REMPLIR"
+  topics = ["######/#"]
+  username = "######"
+  password = "######"
   data_format = "json"
-  name_override = "sensor_data"
+  name_override = "stizyData"
   tag_keys = ["source_address", "sensor_id"]
   tagexclude = ["host"]
 
@@ -38,7 +38,7 @@
     source_address = ["12345678", "7654321", "987654543", "58381714", "13960537", "68191831", "54158491", "69607072", "51488201", "22361595", "24114793", "62061965", "73214383", "60052006", "94981317"] ##Anchor
 
 [[processors.rename]]
-  namepass = ["sensor_data"]
+  namepass = ["stizyData"]
   order = 1
 
 [[processors.rename.replace]]
@@ -61,8 +61,3 @@
       122 = "peopleCount"
       107 = "noise"
       121 = "brightness"
-
-#[[processors.converter]]
-#order = 3
-#[processors.converter.tags]
-#measurement = ["sensor_id"]
